fix(code): more info text alignment fix

--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -85,7 +85,7 @@ button:hover {
   margin-top: -15px;
 }
 
-.modal-overlay {
+.contact-modal-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -98,7 +98,7 @@ button:hover {
   z-index: 1000;
 }
 
-.modal-content {
+.contact-modal-content {
   color: #fff;
   border-radius: 10px;
   padding: 20px 30px;
@@ -107,7 +107,7 @@ button:hover {
   animation: fadeIn 0.4s ease-out, scaleIn 0.4s ease-out;
 }
 
-.close-modal {
+.contact-close-modal {
   margin-top: 15px;
   padding: 10px 20px;
   background: #007bff;
@@ -117,7 +117,7 @@ button:hover {
   cursor: pointer;
 }
 
-.close-modal:hover {
+.contact-close-modal:hover {
   background: #0056b3;
 }
 
